# xmpp-mcp

./: .env.example  .gitattributes  .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  VALIDATION_INVENTORY.md  pyproject.toml  run-server.py  start-lab-ejabberd.py  start-lab.py  xmpp-mcp.spec
.github/workflows/: ci.yml
docs/: CLAUDE_CODE_SETUP.md  PLAN-integration-tests.md
scripts/: demo_chat_search.py  demo_medevac.py  demo_pubsub_forms.py  seed_chat.py
scripts/converse-demo/: index.html
src/xmpp_mcp/: __init__.py  __main__.py  config.py  data_forms.py  mam.py  openfire_admin.py  pubsub.py  security_labels.py  server.py  xmpp_client.py
src/xmpp_mcp/tools/: __init__.py  admin.py  disco.py  mam.py  messaging.py  muc.py  presence.py  pubsub.py
tests/: test_config.py  test_data_forms.py  test_openfire_admin.py  test_pubsub_events.py  test_search_inbox.py  test_security_labels.py  test_xmpp_client.py
tests/integration/: conftest.py  test_chat_search_e2e.py  test_discovery_e2e.py  test_llm_driven_e2e.py  test_mam_e2e.py  test_mcp_wire_e2e.py  test_messaging_e2e.py  test_muc_e2e.py  test_openfire_admin_e2e.py  test_presence_e2e.py  test_pubsub_e2e.py  test_resilience_e2e.py  test_security_labels_e2e.py  test_smoke.py
tests/integration/docker/: Dockerfile.openfire  docker-compose.yml  openfire.xml
tests/integration/docker/ejabberd/: docker-compose.yml  ejabberd.yml
tests/integration/helpers/: chat_script.py  raw_client.py  seclabel_component.py
