[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xmpp-mcp"
version = "0.1.0"
description = "MCP server for XMPP, with support for Openfire (REST admin) and Isode M-Link (XEP-0258 security labels)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "slixmpp>=1.8.5",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "anthropic>=0.40",   # used by the opt-in LLM-driven E2E suite
]

[project.scripts]
xmpp-mcp = "xmpp_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xmpp_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live XMPP server (deselect with '-m \"not integration\"')",
    "docker: tests that boot Openfire in Docker via docker compose (deselect with '-m \"not docker\"')",
    "wire: tests that drive dist/xmpp-mcp.exe over real MCP stdio JSON-RPC (subset of docker)",
    "llm: tests that drive a real Anthropic Claude session via the API (needs ANTHROPIC_API_KEY)",
]
